# engineering-metrics-dashboard

./: .gitignore  .import-linter.ini  .pre-commit-config.yaml  ANALYSIS_COMMANDS.md  CHANGELOG.md  CLAUDE.md  COLLECTION_FIX_SUMMARY.md  IMPLEMENTATION_GUIDE.md  LEAD_TIME_DIAGNOSIS.md  LEAD_TIME_FIX_RESULTS.md  MONITOR_STATUS.md  Makefile  QUICK_START.md  README.md  RELEASE_NOTES.md  RELEASE_v1.0.0.txt  analyze_releases.py  collect_data.py  list_jira_filters.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  test-results.xml  test_dora_performance.py  validate_config.py  verify_collection.sh  verify_jira_versions.py  verify_scope_filter.py
.claude/: settings.local.json
.github/codeql/: codeql-config.yml
.github/workflows/: code-quality.yml
config/: config.example.yaml  config.yaml.example  logging.yaml
docs/: 2026-01-26_SESSION_SUMMARY.md  API_DOCUMENTATION.md  ARCHITECTURE.md  ARCHITECTURE_ROADMAP.md  ARCHITECTURE_VIOLATIONS.md  AUTHENTICATION.md  BLUEPRINT_LOGGING_FIX.md  CI_CD_FIXES.md  CI_TROUBLESHOOTING.md  CLEAN_ARCHITECTURE.md  CODE_QUALITY.md  COLLECTION_CHANGES.md  DATA_QUALITY.md  DEVELOPER_GUIDE.md  DORA_METRICS_IN_PERFORMANCE_SCORE.md  DORA_PHASE2_COMPLETE.md  DORA_PHASE2_PART1_COMPLETE.md  DORA_PHASE2_PART2_COMPLETE.md  ENHANCED_CACHE_PERFORMANCE_ANALYSIS.md  ENHANCED_CACHE_USAGE.md  IMMEDIATE_ITEMS_COMPLETE.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  IMPORT_LINTING.md  INCIDENT_FILTERING_CHANGE.md  INTEGRATION_TESTS_COMPLETE.md  JIRA_FIX_VERSION_TROUBLESHOOTING.md  JIRA_PAGINATION_FIX.md  LEAD_TIME_DIAGNOSIS.md  LONG_TERM_ROADMAP.md  MULTI_ENV_ANALYSIS.md  OPTION_A_COMPLETION_SUMMARY.md  OPTION_D_COMPLETION_SUMMARY.md  OPTION_E_PHASE_1_AND_2_SUMMARY.md  OPTION_E_PROGRESS.md  PAGINATION_QUICK_REF.md  PERFORMANCE.md  PHASE2_APPLICATION_FACTORY.md  PHASE3_COMPLETION.md  PHASE4_IMPROVEMENTS.md  (+36 more)
docs/adr/: 0000-template.md  0001-application-factory-pattern.md  0002-two-tier-caching-strategy.md  0003-clean-architecture-layers.md  0004-time-offset-both-collectors.md  README.md
docs/archive/: README.md
docs/archive/dora/: DORA_METRICS_IN_PERFORMANCE_SCORE.md  DORA_PHASE2_COMPLETE.md
docs/archive/implementation/: IMPLEMENTATION_SUMMARY.md  OPTION_A_COMPLETION_SUMMARY.md  PHASE_2_COMPLETION_SUMMARY.md
logs/performance/: metrics.db
scripts/: clear_repo_cache.py  collect_data.sh  diagnose_ci.sh  generate_password_hash.py  monitor_security_logs.sh  start_dashboard.sh
src/: config.py
src/collectors/: github_collector.py  github_graphql_collector.py  jira_collector.py
src/dashboard/: app.py  auth.py  input_validation.py  rate_limiting.py  security_headers.py
src/dashboard/blueprints/: __init__.py  api.py  dashboard.py  export.py  metrics_bp.py  settings.py
src/dashboard/dtos/: __init__.py  base.py  metrics_dto.py  team_dto.py
src/dashboard/events/: __init__.py  types.py
src/dashboard/services/: __init__.py  cache_backends.py  cache_protocols.py  cache_service.py  enhanced_cache_service.py  event_driven_cache_service.py  eviction_policies.py  metrics_refresh_service.py  performance_metrics_service.py  service_container.py  (+1 more)
src/models/: __init__.py  dora_metrics.py  jira_metrics.py  metrics.py  performance_scoring.py
src/utils/: activity_thresholds.py  date_ranges.py  jira_filters.py  performance.py  performance_tracker.py  repo_cache.py  time_periods.py
tests/: README.md  conftest.py
tests/architecture/: __init__.py  test_layer_dependencies.py  test_naming_conventions.py  test_pattern_compliance.py
tests/collectors/: test_github_error_handling.py  test_github_graphql_collector.py  test_github_graphql_simple.py  test_jira_collector.py  test_jira_fix_versions.py  test_jira_pagination.py
tests/dashboard/: test_api_endpoints.py  test_app.py  test_auth.py  test_enhanced_cache_service.py  test_metrics_routes.py  test_service_container.py  test_templates.py
tests/fixtures/: github_responses.py  jira_responses.py  sample_data.py
tests/integration/: __init__.py  test_collection_workflow.py  test_dashboard_workflow.py  test_dora_integration.py  test_dora_lead_time_mapping.py  test_end_to_end_collection.py  test_error_recovery.py  test_error_recovery_and_cache.py  test_github_collection_integration.py  test_github_collection_workflows.py  test_github_parallel_collection.py.skip  test_jira_adaptive_pagination.py  test_jira_collection_workflows.py  test_jira_error_scenarios.py  test_metrics_orchestration.py  test_time_offset_consistency.py
tests/performance/: benchmark_dashboard.py  benchmark_results.json
tests/security/: __init__.py  test_authentication.py  test_cors_and_headers.py  test_input_validation.py
tests/tools/: __init__.py  test_analyze_performance.py
tests/unit/: test_collect_data.py  test_config.py  test_date_ranges.py  test_dora_metrics.py  test_dora_trends.py  test_dtos.py  test_event_bus.py  test_event_driven_cache.py  test_jira_filters.py  test_jira_metrics.py  test_logging.py  test_metrics_calculator.py  test_performance_metrics_service.py  test_performance_score.py  test_performance_tracker.py  test_release_collection.py  test_validation.py
tests/utils/: test_performance.py
tools/: README.md  analyze_performance.py  verify_jira_versions.py  verify_scope_filter.py
(+63 files in other folders)
